v0.4.0:
- Skip dialogue by calling open_dialog again while it's already writing its text, or in other words, press interact again while it's already writing to skip

v0.3.0:
- Add option.enabled
- Add option.text_disabled
- Add @sound command to change the typing sound
- Can now add custom typing sounds
- Can now specifiy negative delay to skip X frames, for instance -1 will skip 1 frame etc, thus making text even faster
- FIX delay and pause wait time. Before, a delay/pause of 1 would wait for 2 frames, now correctly only 1 etc

v0.2.0:
- Add dialog.back()
- dialog_system.lua no longer adds a "dialog_system" global variable, instead returns it, so you need to assign it to a variable yourself

v0.1.0:
- First release