@@ -1,2 +1,4 @@
+Somehow check if script_interacting and script_source_file point to the same file, to make sure they use the same lua context
+
 Make portait optional
 Make portrait resizable
