@@ -1,3 +1,7 @@
+UNRELEASED:
+- Global config can now be specified on init, which will be used by any instance of dialog_system
+- Add config.disable_controls
+
 v0.4.0:
 - Skip dialogue by calling open_dialog again while it's already writing its text, or in other words, press interact again while it's already writing to skip
 
